skin/frontend/reman/default/css/styles.css
/* ... */
.reman_preloader_shipping{
	background-image:url(../images/white-loader.gif);
	background-repeat:no-repeat;
	position:absolute;
	height:100px;
	width:100px;
	margin-left: 57px;
	margin-top: 20px;

}

.reman_preloader_shipping .shipping-estimation-text{
	width: 200px;
	top: 110px;
	position: absolute;
	left: -21px;
	color: #fff;
}


.sku{
	color:#000;
}


#product_details_btn{
	width: 100px;
	height: 28px;
	border: 1px solid #999;
	position: relative;
	float: left;
	clear: both;
	margin-top: 30px;
	margin-left: 28px;
	background:url(../images/btn_bg_h31.png) repeat-x;
	text-align:center;
	line-height:28px;
	color:#000;
	cursor:pointer;
}
#product_details_btn a {
	text-decoration:none;
	color:#666;
}

.product_error{
	position: relative;
	font-size: 20px;
	text-align: center;
	top: 35px;
	color: #E06060;
	font-weight: bold;
	clear: left;
}

.reman_page_heading{
	position: relative;
	float: left;
	margin-bottom: 4px;
}

/*Product View Page*/

#product_attributes{
	position: relative;
	font-size: 12px;
	float: left;
	color: black;
	margin-left: 5px;
	margin-top: 15px;
}

#product_attributes table{
	float:left; 
	border-spacing:0 5px;
}

#product_attributes .label{
	font-weight: bold;
}

#product_attributes .value{
	padding-left:15px;
	width:213px;
}

#product_attributes .value2{
	padding-left:15px;
}

.desc_cont{
	margin-bottom:30px;
	color:#000;

}

.description_lable{
	color: #000;
	font-weight: bold;
	margin-bottom: 5px;
}

/* FORGOT PASSWORD FORM*/
#reman_forgotpass{
	height:273px;
	width:479px; 
	background:url(../images/login_bg.png) no-repeat;
	position: relative;
	float: left;
	margin-left: 65px;
	margin-top: 15px;
}

#reman_forgotpass .heading{
	margin-top:25px;
	margin-left:40px;

}

#reman_forgotpass .heading span{
	font-size: 25px;
	font-weight: bold;
	color: #cb1f30;
}

#reman_forgotpass  .info{
	margin-top: 15px;
	margin-left: 55px;
	width: 345px;
}

#reman_forgotpass  .info span{
	font-size: 10px;
	color: #000;
}

.reman_reset_button{
	background:url(../images/reset-btn.png) no-repeat;
	width:159px;
	height:42px;
	position: relative;
	float: right;
	margin-right: 35px;
	margin-top: 10px;
	cursor:pointer;
}

.reman_reset_button .submit{
	width:159px;
	height:42px;
	opacity:0;
	filter: alpha(opacity=0);
	cursor:pointer;
}


/* LOGIN*/
.reman_login_content{
	height:273px !important;
	width:479px !important; 
	background:url(../images/login_bg.png) no-repeat !important; 
	border: none !important;
	margin:0 auto;
}

.reman_user_login_lable{
	font-size: 26px;
	color: #cb1f30;
	font-weight: bold;
	padding-top: 20px;
	padding-left: 30px;
}

.reman_login_form{
    padding-left: 90px;
    padding-top: 20px;
}

.input-box_reman{
	margin-bottom:20px;
}

.inputs_login{
	border: 1px solid #000 !important;
	width: 248px;
	/*height: 36px;*/
	font-size: 17px;
	/*line-height: 21px;*/
	padding:8px 0px 8px 5px !important;
}

#reman_forgot_pass{
	position: relative;
	float: left;
	font-size: 12px;
	margin-top: 30px;
	margin-left: 35px;
}

#reman_forgot_pass span {
	float: left;
	color: #cb1f30;
	font-weight: bold;
	margin-right: 5px;
}

#reman_forgot_pass a {
	text-decoration: none;
	color: #000;
}


.reman_login_submit{
	margin-left:97px; 
	position:relative; 
	top:10px; 
	height:20px;
}

.reman_login_button{
	background:url(../images/login_btn.png) no-repeat !important;
	width:155px;
	height:41px;
	float:right;
	margin-right:65px;
	cursor:pointer; 
}

.reman_login_button .submit{
	width:155px;
	height:41px;
	opacity:0;
	filter: alpha(opacity=0);
	cursor:pointer;
}

#register_btn{
	background: url(../images/register_btn.png) no-repeat;
	height: 78px;
	width: 478px;
	margin: 0 auto;
	top: -5px;
	position: relative;
	cursor:pointer;
}


.reqmark{
	position: relative;
	float: left;
	line-height: 27px;
	color: red;
	padding-left: 5px;
}

.login_links{
	position: relative;
	float: right;
	margin-right: 20px;
	margin-top: 6px;
	font-size: 12px;
}
/*Login form*/

.reman_login_form td{
	height:40px;
}

.reman_login_form .links td{
	height:18px;
	font-size:14px;
}

/*Error Part Number Popup*/
#product_error_popup , #session_error_popup{
	width: 260px;
	height: 90px;
	border: 1px solid #E06060;
	text-align: center;
	padding-top: 40px;
	font-weight: bold;
	z-index: 5;
	position: absolute;
	background: white;
	left: 192px;
	top: 50px;
	display:none;
}

#product_error_popup button , #session_error_popup button{
	width: 80px;
	height: 25px;
	margin-top: 10px;
	cursor:pointer;
}

#session_error_popup_profile{
	width: 260px;
	height: 90px;
	border: 1px solid #E06060;
	text-align: center;
	padding-top: 40px;
	font-weight: bold;
	z-index: 5;
	position: absolute;
	background: white;
	left: 163px;
	top: 82px;
	display:none;
}

#session_error_popup_profile button{
	width: 80px;
	height: 25px;
	margin-top: 10px;
	cursor:pointer;
}

/*Inventory Info BLock*/

#stock_avl table {
	margin-top: 15px;
	margin-left: 10px;
	font-size: 12px;
	color:#000;
}

#stock_avl table tr{
	height:20px;
}

#stock_avl .title{
	font-size: 14px;
	color: #000;
	text-align:center;
	font-weight:bold;
}

#stock_avl .pricing .lable{
	padding-right: 10px;
	font-size: 12px;
	width: 65px;
	text-align: right;
}


#stock_avl .lable{
	padding-right: 5px;
	font-size: 12px;
	text-align: right;
	
}

#stock_avl .bottom_message{
	font-size: 12px;
	margin-left: 20px;
	margin-top: 20px;
	font-weight: bold;
	color: #f6193a;
}

#stock_avl .bottom_message div{
	text-align: center;
	width: 125px;
}


#order-now-btn{
	background: url(../images/order-now.png) no-repeat;
	height: 28px;
	margin-top: 10px;
	margin-left: 7px;
	cursor:pointer;
}

#sell-sheet-ico{
	background: url(../images/sell-sheet-doc-ico.png) no-repeat;
	width:35px;
	height:35px;
}

#liquid-doc-ico{
	background: url(../images/fuel-doc-ico.png) no-repeat;
	width:35px;
	height:35px;
}

#breadcrumb_info.disabled{
	color:#999999;
}

#breadcrumb_info.disabled .breadcrumb:hover {
text-decoration: none;
}

.reman_docs{
	width:100px;
	font-size:12px;
	float:left;
	margin-top:-8px;
}
/* ... */

